--- a/CourseWork/wwwroot/css/site.css
+++ b/CourseWork/wwwroot/css/site.css
@@ -118,11 +118,16 @@ textarea {
 
 .item {
     margin: 8px;
-    height: 510px;
+    height: 470px;
     width: 18rem;
 }
 
 .like {
     height: 50px;
     width: 50px
+}
+
+.like-disabled {
+    pointer-events: none;
+    cursor: default;
 }
