--- a/CourseWork/Views/Profile/Collection.cshtml
+++ b/CourseWork/Views/Profile/Collection.cshtml
@@ -8,11 +8,22 @@
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 text-center">
 		<img class="collection-image" src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" />
 
+
 		<div class="row">
 			<div class="col-6 d-flex justify-content-end">
-				<a id="imgA" href="#">
-					<img class="like" src="~/images/unlike.png" id="like" alt="" loading="lazy" />
-				</a>
+				@if(User.Identity.IsAuthenticated)
+				{
+					<a id="imgA" href="#">
+						<img class="like" src="~/images/unlike.png" id="like" alt="" loading="lazy" />
+					</a>
+				}
+				else
+				{
+					<a id="imgA" href="#" class="like-disabled">
+						<img class="like" src="~/images/unlike.png" id="like" alt="" loading="lazy" />
+					</a>
+				}
+
 			</div>
 			<div class="col-6 d-flex justify-content-start">
 				<h1 id="likesCount"></h1>
