--- a/CourseWork/Views/Profile/MyCollections.cshtml
+++ b/CourseWork/Views/Profile/MyCollections.cshtml
@@ -4,14 +4,23 @@
 }
 
 <h1 class="text-center">Список моих коллекций</h1>
-<div class="list-group">
+<div class="row">
     @if(Model.Count == 0)
     {
         <h1 class="text-center">Вы пока не создали ни одну коллекцию</h1>
     }
-    @foreach(var collection in Model)
+    @foreach(var col in Model)
     {
-        <p class="collections"><a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Collection/@collection.Id">@collection.Name</a></p>
-    }
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
+			<div class="card item">
+				<img src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" class="card-img-top" alt="">
+				<div class="card-body">
+					<h5 class="card-title">@col.Name</h5>
+					<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 100))</p>
+					<a href="/Profile/EditCollection/@col.Id" class="btn btn-primary stretched-link">Редактировать</a>
+				</div>
+			</div>
+		</div>
+	}
 </div>
 
