--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-md-6 col-lg-4">
 		@if(User.IsInRole("admin"))
 		{
 			<a class="list-group-item list-group-item-action list-group-item-danger" href="/Admin">Админка</a>
@@ -16,11 +16,12 @@
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Поменять пароль</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактирование профиля</a>
 	</div>
-	<div class="col-md-6 col-md-offset-6 text-center">
+	<div class="col-md-6  text-center">
 		<img class="avatar" src="~/images/chan.jpg" alt="avatar_logo">
 		<h3>@User.Identity.Name</h3>
 		<p>Создано коллекций - @ViewData["CollectionsCount"]</p>
 		<p>Создано айтемов - @ViewData["ItemsCount"]</p>
+		<p>Количество лайков - @ViewData["LikesCount"]</p>
 	</div>
 </div>
 
