--- a/CourseWork/Views/Profile/CommentsPartial.cshtml
+++ b/CourseWork/Views/Profile/CommentsPartial.cshtml
@@ -6,7 +6,7 @@
 				<input class="form-control" type="text" placeholder="Оставить коментарий" id="comment">
 			</div>
 			<div class="col-4">
-				<input class="btn btn-outline-primary" type="submit" value="Отправить" id="sendComment">
+				<input class="btn btn-outline-primary d-flex justify-content-start" type="submit" value="Отправить" id="sendComment">
 			</div>
 		</div>
 	</div>
@@ -17,4 +17,7 @@ else
 		<p>Чтобы оставлять комментарии <a href="/Account/Login">авторизируйтесь</a></p>
 	</div>
 }
-<div class="list-group" id="comments"></div>
+<hr />
+<div class="row">
+	<div class="list-group col-12 pl-3" id="comments"></div>
+</div>
