--- a/CourseWork/Views/Home/Search.cshtml
+++ b/CourseWork/Views/Home/Search.cshtml
@@ -28,7 +28,7 @@ else
 					<div class="card-body">
 						<h5 class="card-title">@col.Name</h5>
 						<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
-						<a href="/Profile/Collection/@col.Id" class="btn btn-primary stretched-link">Посмотреть коллекцию</a>
+						<a href="/Home/Collection/@col.Id" class="btn btn-primary stretched-link">Посмотреть коллекцию</a>
 					</div>
 				</div>
 			</div>
