--- a/CourseWork/Views/Home/Index.cshtml
+++ b/CourseWork/Views/Home/Index.cshtml
@@ -18,12 +18,14 @@
 	@foreach (var col in Model)
 	{
 		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
-			<div class="card item">
+			<div class="card m-2">
 				<img src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" class="card-img-top" alt="">
 				<div class="card-body">
 					<h5 class="card-title">@col.Name</h5>
 					<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
-					<a href="/Profile/Collection/@col.Id" class="btn btn-primary stretched-link">Посмотреть коллекцию</a>
+					<div class="d-flex align-items-end">
+						<a href="/Home/Collection/@col.Id" class="btn btn-primary">Посмотреть коллекцию</a>
+					</div>
 				</div>
 			</div>
 		</div>
