--- a/CourseWork/Views/Profile/MyCollections.cshtml
+++ b/CourseWork/Views/Profile/MyCollections.cshtml
@@ -12,12 +12,16 @@
     @foreach(var col in Model)
     {
 		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
-			<div class="card item">
+			<div class="card">
 				<img src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" class="card-img-top" alt="">
 				<div class="card-body">
 					<h5 class="card-title">@col.Name</h5>
 					<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
-					<a href="/Profile/EditCollection/@col.Id" class="btn btn-primary stretched-link">Редактировать</a>
+					<div class="d-flex justify-content-between">
+						<a href="/Home/Collection/@col.Id" class="btn btn-outline-primary">Посмотреть</a>
+						<a href="/Profile/EditCollection/@col.Id" class="btn btn-outline-primary">Редактировать</a>
+					</div>
+					
 				</div>
 			</div>
 		</div>
