--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -12,6 +12,7 @@
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/CreateCollection">Создать коллекцию</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/MyCollections">Мои коллекции</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактировать коллекцию</a>
+		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/CreateItem">Создать айтем</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/MyItems">Мои айтемы</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Поменять пароль</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактирование профиля</a>
