--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -1,28 +1,29 @@
 ﻿@model CourseWork.Models.ViewModels.LoginViewModel
 @{
-    ViewData["Title"] = "Login";
+	ViewData["Title"] = "Login";
 }
 
-<h2>Вход на сайт</h2>
- 
-<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
+<h2 class="text-center">Вход на сайт</h2>
 
-    <div>
-        <div class="form-group">
-            <label asp-for="Name">Введите логин</label><br />
-            <input type="text" asp-for="Name" />
-            <span asp-validation-for="Name" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div class="form-group">
-            <input class="btn btn-outline-primary" type="submit" value="Войти" />
-        </div>
-    </div>
-</form>
-<p>Нет аккаунта? - <a asp-action="Register" asp-controller="Account">создайте его</a>!</p>
+<div class="container text-center custom-group-form">
+	<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+		<div class="validation" asp-validation-summary="ModelOnly"></div>
+
+		<div class="form-group">
+			<label asp-for="Name">Введите логин</label><br />
+			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
+			<span asp-validation-for="Name" />
+		</div>
+		<div class="form-group">
+			<label asp-for="Password">Введите пароль</label><br />
+			<input class="form-control" asp-for="Password" placeholder="пароль" />
+			<span asp-validation-for="Password" />
+		</div>
+		<div>
+			<input class="btn btn-outline-primary" type="submit" value="Войти" />
+		</div>
+
+	</form>
+	<p>Нет аккаунта? - <a asp-action="Register" asp-controller="Account">создайте его</a>!</p>
+</div>
 
