--- a/CourseWork/Views/Account/Register.cshtml
+++ b/CourseWork/Views/Account/Register.cshtml
@@ -1,31 +1,32 @@
 ﻿@model CourseWork.Models.ViewModels.RegisterViewModel
 @{
-    ViewData["Title"] = "Register";
+	ViewData["Title"] = "Register";
 }
-<h2>Регистрация</h2>
- 
-<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <div>
-        <div>
-            <label asp-for="Name">Введите логин</label><br />
-            <input type="text" asp-for="Name" />
-            <span asp-validation-for="Name" />
-        </div>
-        <div>
-            <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div>
-            <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword" />
-        </div>
-        <div>
-            <input class="btn btn-outline-primary" type="submit" value="Регистрация" />
-        </div>
-    </div>
-</form>
-<p>Уже есть аккаунт? - <a asp-action="Login" asp-controller="Account">авторизуйтесь</a>!</p>
+<h2 class="text-center">Регистрация</h2>
+
+<div class="container text-center custom-group-form">
+	<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
+		<div class="validation" asp-validation-summary="ModelOnly"></div>
+
+		<div class="form-group">
+			<label asp-for="Name">Введите логин</label><br />
+			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
+			<span asp-validation-for="Name" />
+		</div>
+		<div class="form-group">
+			<label asp-for="Password">Введите пароль</label><br />
+			<input class="form-control" asp-for="Password" placeholder="Пароль" />
+			<span asp-validation-for="Password" />
+		</div>
+		<div class="form-group">
+			<label asp-for="ConfirmPassword">Повторите пароль</label><br />
+			<input class="form-control" asp-for="ConfirmPassword" placeholder="Повторите пароль" />
+			<span asp-validation-for="ConfirmPassword" />
+		</div>
+		<div>
+			<input class="btn btn-outline-primary" type="submit" value="Регистрация" />
+		</div>
+	</form>
+	<p>Уже есть аккаунт? - <a asp-action="Login" asp-controller="Account">авторизуйтесь</a>!</p>
+</div>
 
