--- a/CourseWork/Views/Profile/MyCollections.cshtml
+++ b/CourseWork/Views/Profile/MyCollections.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     @if(Model.Count == 0)
     {
-        <h1 class="text-center">Вы пока не создали ни одну коллекцию</h1>
+        <h1 class="col-12 text-center">Вы пока не создали ни одну коллекцию</h1>
     }
     @foreach(var col in Model)
     {
@@ -18,7 +18,7 @@
 					<h5 class="card-title">@col.Name</h5>
 					<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
 					<div class="d-flex justify-content-between">
-						<a href="/Home/Collection/@col.Id" class="btn btn-outline-primary">Посмотреть</a>
+						@*<a href="/Home/Collection/@col.Id" class="btn btn-outline-primary">Посмотреть</a>*@
 						<a href="/Profile/EditCollection/@col.Id" class="btn btn-outline-primary">Редактировать</a>
 					</div>
 					
