--- a/CourseWork/Views/Profile/EditCollection.cshtml
+++ b/CourseWork/Views/Profile/EditCollection.cshtml
@@ -36,7 +36,7 @@
 			</div><br><br>
 		</div>
 
-		@if (Model.Items.Count() != 0)
+		@if ((List<Item>)ViewData["Items"] != null)
 		{
 			<div style="overflow: auto;">
 				<table class="table table-sm">
