--- a/CourseWork/Views/Profile/CreateCollection.cshtml
+++ b/CourseWork/Views/Profile/CreateCollection.cshtml
@@ -28,6 +28,7 @@
 				<option value="Silverware">Silverware</option>
 				<option value="Pictures">Pictures</option>
 				<option value="Coins">Coins</option>
+				<option value="Other">Other</option>
 			</select>
 			<span asp-validation-for="Theme" />
 		</div>
