--- a/CourseWork/Views/Profile/CreateItem.cshtml
+++ b/CourseWork/Views/Profile/CreateItem.cshtml
@@ -7,18 +7,18 @@
 <h1 class="text-center">Создать айтем</h1>
 
 <div class="container text-center">
-	<form asp-action="CreateItem" asp-controller="Profile" method="post">
+	@*<form asp-action="CreateItem" asp-controller="Profile" method="post">*@
 
 		<div class="container text-center custom-group-form">
 			<div class="form-group">
-				<label asp-for="Name">Название айтема</label><br />
-				<input class="form-control" type="text" asp-for="Name" placeholder="Название айтема" />
+				@*<label asp-for="Name">Название айтема</label><br />*@
+				<input class="form-control" type="text" id="name" placeholder="Название айтема" />
 				<span asp-validation-for="Name" />
 			</div>
 
 			<div class="form-group">
-				<label asp-for="Content">Содержание айтема</label><br />
-				<textarea class="form-control" asp-for="Content" placeholder="Содержимое"></textarea>
+				@*<label asp-for="Content">Содержание айтема</label><br />*@
+				<textarea class="form-control" id="content" placeholder="Содержимое"></textarea>
 				<span asp-validation-for="Content" />
 			</div>
 		</div>
@@ -60,12 +60,12 @@
 		</div>
 
 		<div class="form-group">
-			<button class="btn btn-outline-primary">Добавить</button>
+			<button class="btn btn-outline-primary" id="createBtn">Добавить</button>
 		</div>
-	</form>
+	@*</form>*@
 </div>
 
 @section Scripts {
-<script src="~/js/createItem.cs"></script>
+<script src="~/js/createItem.js"></script>
 }
 
