--- a/CourseWork/Views/Home/Collection.cshtml
+++ b/CourseWork/Views/Home/Collection.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 text-center">
-		<img class="collection-image" src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" />
+		<img class="collection-image" src="@Model.ImgRef" onError="this.src='/images/imgnotfound.jpg'" />
 
 
 		<div class="row m-3">
