--- a/CourseWork/Views/Profile/CreateCollection.cshtml
+++ b/CourseWork/Views/Profile/CreateCollection.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="text-center">Создать коллекцию</h1>
 <div class="container text-center custom-group-form">
-	<form asp-action="CreateCollection" asp-controller="Profile" method="post">
+	<form asp-action="CreateCollection" asp-controller="Profile" enctype="multipart/form-data" method="post">
 		<div class="validation" asp-validation-summary="ModelOnly"></div>
 
 		<div class="form-group">
@@ -18,6 +18,11 @@
 			<label asp-for="Description">Описание коллекции</label><br />
 			<textarea class="form-control" asp-for="Description"></textarea>
 			<span asp-validation-for="Description" />
+		</div>
+
+		<div class="form-group">
+			<p>Обложка коллекции</p>
+			<input type="file" name="image" id="image" /><br /><br />
 		</div>
 
 		<div class="form-group">
