--- a/CourseWork/Views/Profile/EditCollection.cshtml
+++ b/CourseWork/Views/Profile/EditCollection.cshtml
@@ -23,6 +23,11 @@
 			</div>
 
 			<div class="form-group">
+				<label asp-for="ImgRef">Обложка коллекции</label>
+				<input asp-for="ImgRef" type="file" name="image" id="image" /><br /><br />
+			</div>
+
+			<div class="form-group">
 				<label asp-for="Theme">Тема коллекции</label><br />
 				<select class="form-control" asp-for="Theme">
 					<option value="Books">Books</option>
