--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -22,7 +22,7 @@
 		<h3>@User.Identity.Name</h3>
 		<p>Создано коллекций - @ViewData["CollectionsCount"]</p>
 		<p>Создано айтемов - @ViewData["ItemsCount"]</p>
-		<p>Количество лайков - @ViewData["LikesCount"]</p>
+		<p>Количество полученных лайков - @ViewData["LikesCount"]</p>
 	</div>
 </div>
 
