--- a/CourseWork/Views/Home/Collection.cshtml
+++ b/CourseWork/Views/Home/Collection.cshtml
@@ -40,9 +40,9 @@
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-8 col-md-offset-6">
 		<input type="hidden" id="collectionId" value="@Model.Id" />
-		<h5>@Model.Date</h5>
 		<h1>@Model.Name</h1>
-		<h2>О коллекции</h2>
+		<h3>О коллекции</h3>
+		<small class="text-secondary">Дата создания: @Model.Date</small>
 		<p>Автор: @Model.Author</p>
 		<p>Тема: @Model.Theme</p>
 		<p>Описание: @Model.Description</p>
