dropbox service update & cosmetic changes

--- a/CourseWork/Views/Home/Index.cshtml
+++ b/CourseWork/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 	</form>
 </div>
 
-<h3 class="text-center">Недавние</h3>
+<h3 class="text-center text-dark">Недавние</h3>
 <div class="row">
 	@foreach (var col in Model)
 	{
