--- a/CourseWork/Views/Home/Search.cshtml
+++ b/CourseWork/Views/Home/Search.cshtml
@@ -12,10 +12,10 @@
       </form>
 </div>
 
-<h1 class="text-center">Результат поиска</h1>
+<h1 class="text-center text-dark">Результат поиска</h1>
 @if(Model.Count == 0)
 {
-	<h5 class="text-center">Ничего не найдено</h5>
+	<h5 class="text-center text-dark">Ничего не найдено</h5>
 }
 else
 {
