--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -11,18 +11,17 @@
 		}
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/CreateCollection">Создать коллекцию</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/MyCollections">Мои коллекции</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактировать коллекцию</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/CreateItem">Создать айтем</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/MyItems">Мои айтемы</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Поменять пароль</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактирование профиля</a>
 	</div>
 	<div class="col-md-6  text-center">
-		<img class="avatar" src="~/images/chan.jpg" alt="avatar_logo">
+		<img class="avatar" src="~/images/avatar.png" alt="avatar_logo">
 		<h3>@User.Identity.Name</h3>
-		<p>Создано коллекций - @ViewData["CollectionsCount"]</p>
-		<p>Создано айтемов - @ViewData["ItemsCount"]</p>
-		<p>Количество полученных лайков - @ViewData["LikesCount"]</p>
+		<p>Создано коллекций: @ViewData["CollectionsCount"]</p>
+		<p>Создано айтемов: @ViewData["ItemsCount"]</p>
+		<p>Количество лайков: @ViewData["LikesCount"]</p>
 	</div>
 </div>
 
