--- a/CourseWork/Views/Home/Collection.cshtml
+++ b/CourseWork/Views/Home/Collection.cshtml
@@ -57,7 +57,7 @@
 		}
 		else
 		{
-			<div style="overflow: auto; height: 300px">
+			@*<div style="overflow: auto; height: 300px">
 				<table class="table">
 					<thead class="table-light">
 						<tr>
@@ -78,7 +78,11 @@
 						}
 					</tbody>
 				</table>
-			</div>
+			</div>*@
+			@foreach (var item in Model.Items)
+			{
+				<a class="list-group-item list-group-item-action list-group-item-light" href="/Home/Item/@item.Id">@item.Name</a>
+			}
 		}
 	</div>
 
