--- a/CourseWork/Views/Profile/CreateItem.cshtml
+++ b/CourseWork/Views/Profile/CreateItem.cshtml
@@ -22,6 +22,11 @@
 		</div>
 	</div>
 
+	<div class="form-group">
+			<p>Обложка айтема</p>
+			<input type="file" name="image" id="image" /><br /><br />
+		</div>
+
 	<div class="container text-center">
 		<h3>Добавить в коллекцию</h3>
 		@if ((int)ViewData["Count"] != 0)
