fixed item comments&likes

--- a/CourseWork/Views/Home/Item.cshtml
+++ b/CourseWork/Views/Home/Item.cshtml
@@ -13,7 +13,7 @@
 			<div class="col-6 d-flex justify-content-end">
 				@if (User.Identity.IsAuthenticated)
 				{
-					<a id="imgA" href="#">
+					<a id="img" href="#">
 						<img class="like" src="~/images/nolike.png" id="like" alt="" loading="lazy" />
 					</a>
 				}
