--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -23,7 +23,7 @@
 
 		<div class="form-group">
 			<p>Обложка коллекции</p>
-			<input type="file" name="image" id="image" /><br /><br />
+			<input type="file" name="image"/><br /><br />
 		</div>
 
 		<div class="form-group">
