--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -25,7 +25,7 @@
 
 			<div class="form-group">
 				<label asp-for="ImgRef">Обложка коллекции</label>
-				<input asp-for="ImgRef" type="file" name="image" id="image" /><br /><br />
+				<input asp-for="ImgRef" type="file"/><br /><br />
 			</div>
 
 			<div class="form-group">
