--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="text-center">Редактирование айтема</h1>
 <div class="container text-center">
-	<form asp-action="EditItem" asp-controller="Item">
+	<form asp-action="EditItem" asp-controller="Item" enctype="multipart/form-data" method="post">
 		<div class="container text-center custom-group-form">
 			<div class="validation" asp-validation-summary="ModelOnly"></div>
 
@@ -21,6 +21,11 @@
 				<textarea class="form-control" asp-for="Content"></textarea>
 				<span asp-validation-for="Content" />
 			</div>
+		</div>
+
+		<div class="form-group">
+			<p>Обложка айтема</p>
+			<input type="file" name="image"/><br /><br />
 		</div>
 
 		<div class="d-flex justify-content-center">
