--- a/CourseWork/Views/Home/Index.cshtml
+++ b/CourseWork/Views/Home/Index.cshtml
@@ -17,9 +17,17 @@
 <div class="row">
 	@foreach (var col in Model)
 	{
-		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 			<div class="card m-2">
-				<img src="@col.ImgRef" onError="this.src='/images/imgnotfound.jpg'" class="card-img-top image" alt="">
+
+				<div class="parent">
+					<img class="lazy"
+					 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+					 data-src="@col.ImgRef"
+					 onError="this.src='/images/imgnotfound.jpg'"
+					 alt="Image">
+				</div>
+				
 				<div class="card-body">
 					<h5 class="card-title">@col.Name</h5>
 					<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
@@ -31,4 +39,12 @@
 		</div>
 	}
 </div>
+
+@section Scripts {
+	<script>
+		var lazyLoadInstance = new LazyLoad({
+			elements_selector: ".lazy"
+		});
+	</script>
+}
 
