--- a/CourseWork/Views/Home/Search.cshtml
+++ b/CourseWork/Views/Home/Search.cshtml
@@ -23,8 +23,14 @@ else
 		@foreach (var col in Model)
 		{
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-				<div class="card item">
-					<img src="~/images/imgnotfound2.jpg" onError="this.src='/images/imgnotfound.jpg'" class="card-img-top" alt="">
+				<div class="card m-2">
+					<div class="parent">
+						<img class="lazy"
+						src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+						data-src="@col.ImgRef"
+						onError="this.src='/images/imgnotfound.jpg'"
+						alt="Image">
+					</div>
 					<div class="card-body">
 						<h5 class="card-title">@col.Name</h5>
 						<p class="card-text">@col.Description.Substring(0, Math.Min(col.Description.Length, 50))</p>
@@ -36,3 +42,10 @@ else
 	</div>
 }
 
+@section Scripts {
+	<script>
+		var lazyLoadInstance = new LazyLoad({
+			elements_selector: ".lazy"
+		});
+	</script>
+}
