--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="~/js/lazyload.min.js"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
