--- a/CourseWork/wwwroot/css/site.css
+++ b/CourseWork/wwwroot/css/site.css
@@ -139,3 +139,18 @@ textarea {
     max-height:300px;
     max-width: 300px;
 }*/
+
+.parent {
+    border-radius: 3px;
+    overflow: hidden;
+    height: 300px;
+    max-height: 300px;
+}
+
+    .parent img {
+        width: 100%;
+        display: block;
+        background-image: url(data:image/gif;base64,R0lGODlhCgAIAIABAN3d3f///yH5BAEAAAEALAAAAAAKAAgAAAINjAOnyJv2oJOrVXrzKQA7);
+        height: 300px;
+        max-height: 300px;
+    }
