--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -6,8 +6,14 @@
 
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 text-center">
-		<img class="collection-image" src="@Model.ImgRef" onError="this.src='/images/imgnotfound.jpg'" />
 
+		<div class="parent">
+			<img class="collection-image lazy"
+				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+				 data-src="@Model.ImgRef"
+				 onError="this.src='/images/imgnotfound.jpg'"
+				 alt="" />
+		</div>
 
 		<div class="row m-3">
 			<div class="col-6 d-flex justify-content-end">
@@ -65,5 +71,10 @@
 @section Scripts {
 	<script src="~/js/comments.js"></script>
 	<script src="~/js/likes.js"></script>
+	<script>
+		var lazyLoadInstance = new LazyLoad({
+			elements_selector: ".lazy"
+		});
+	</script>
 }
 
