--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<div class="col-md-6 col-lg-4">
-		@if (User.IsInRole("admin"))
+		@if (User.IsInRole("Admin"))
 		{
 			<a class="list-group-item list-group-item-action list-group-item-danger" href="/Admin">Админка</a>
 		}
