added profile service #2

--- a/CourseWork/Views/Item/Items.cshtml
+++ b/CourseWork/Views/Item/Items.cshtml
@@ -14,7 +14,7 @@
 			<div class="card m-2">
 
 				<div class="parent">
-					<img class="lazy"
+					<img class="lazy image"
 					 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
 					 data-src="@col.ImgRef"
 					 onError="this.src='/images/imgnotfound.jpg'"
