--- a/CourseWork/Views/Home/Search.cshtml
+++ b/CourseWork/Views/Home/Search.cshtml
@@ -25,7 +25,7 @@ else
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 				<div class="card m-2">
 					<div class="parent">
-						<img class="lazy"
+						<img class="lazy image"
 						src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
 						data-src="@col.ImgRef"
 						onError="this.src='/images/imgnotfound.jpg'"
