--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -14,16 +14,18 @@
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Мои коллекции</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Item/CreateItem">Создать айтем</a>
 		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Мои айтемы</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Поменять пароль</a>
-		<a class="list-group-item list-group-item-action list-group-item-light" href="#">Редактирование профиля</a>
+		<a class="list-group-item list-group-item-action list-group-item-light" href="/Account/ChangePassword">Поменять пароль</a>
+		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Settings/@Model.Id">Редактирование профиля</a>
 	</div>
 	<div class="col-md-6  text-center">
-		<div>
-			<img class="avatar lazy"
-				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
-				 data-src="@Model.ImgRef"
-				 onError="this.src='/images/avatar.png'"
-				 alt="avatar_logo">
+		<div class="d-flex justify-content-center">
+			<div class="parent">
+				<img class="avatar lazy"
+					 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+					 data-src="@Model.ImgRef"
+					 onError="this.src='/images/avatar.png'"
+					 alt="avatar_logo">
+			</div>
 		</div>
 		<h3>@Model.Username</h3>
 		<p>Создано коллекций: @Model.CollectionsCount</p>
