--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -8,20 +8,19 @@
 
 <div class="container text-center custom-group-form">
 	<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-		<div class="validation" asp-validation-summary="ModelOnly"></div>
+		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="form-group">
 			<label asp-for="Name">Введите логин</label><br />
 			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
-			<span asp-validation-for="Name" />
 		</div>
 		<div class="form-group">
 			<label asp-for="Password">Введите пароль</label><br />
 			<input class="form-control" asp-for="Password" placeholder="пароль" />
-			<span asp-validation-for="Password" />
 		</div>
+
 		<div>
-			<input class="btn btn-outline-primary" type="submit" value="Войти" />
+			<button class="btn btn-outline-primary" type="submit" value="Войти" />
 		</div>
 
 	</form>
