--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -7,23 +7,21 @@
 <h1 class="text-center">Создать коллекцию</h1>
 <div class="container text-center custom-group-form">
 	<form asp-action="CreateCollection" asp-controller="Collection" enctype="multipart/form-data" method="post">
-		<div class="validation" asp-validation-summary="ModelOnly"></div>
+		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="form-group">
 			<label asp-for="Name">Название коллекции</label><br />
 			<input class="form-control" type="text" asp-for="Name" />
-			<span asp-validation-for="Name" />
 		</div>
 
 		<div class="form-group">
 			<label asp-for="Description">Описание коллекции</label><br />
 			<textarea class="form-control" asp-for="Description"></textarea>
-			<span asp-validation-for="Description" />
 		</div>
 
 		<div class="form-group">
 			<p>Обложка коллекции</p>
-			<input type="file" name="image"/><br /><br />
+			<input type="file" name="image" /><br /><br />
 		</div>
 
 		<div class="form-group">
@@ -36,13 +34,11 @@
 				<option value="Coins">Coins</option>
 				<option value="Other">Other</option>
 			</select>
-			<span asp-validation-for="Theme" />
 		</div>
+
 		<div class="form-group">
 			<button class="btn btn-outline-primary">Добавить</button>
 		</div>
-
 	</form>
-
 </div>
 
