--- a/CourseWork/Views/Item/CreateItem.cshtml
+++ b/CourseWork/Views/Item/CreateItem.cshtml
@@ -6,25 +6,23 @@
 
 <h1 class="text-center">Создать айтем</h1>
 
-<div class="container text-center">
+<div class="container text-center custom-group-form">
 	<form asp-action="CreateItem" asp-controller="Item" enctype="multipart/form-data" method="post">
-		<div class="container text-center custom-group-form">
-			<div class="form-group">
-				<label asp-for="Name">Название айтема</label><br />
-				<input class="form-control" type="text" asp-for="Name" />
-				<span asp-validation-for="Name" />
-			</div>
+		<div class="validation" asp-validation-summary="All"></div>
 
-			<div class="form-group">
-				<label asp-for="Content">Содержание айтема</label><br />
-				<textarea class="form-control" asp-for="Content"></textarea>
-				<span asp-validation-for="Content" />
-			</div>
+		<div class="form-group">
+			<label asp-for="Name">Название айтема</label><br />
+			<input class="form-control" type="text" asp-for="Name" />
+		</div>
+
+		<div class="form-group">
+			<label asp-for="Content">Содержание айтема</label><br />
+			<textarea class="form-control" asp-for="Content"></textarea>
 		</div>
 
 		<div class="form-group">
 			<p>Обложка айтема</p>
-			<input type="file" name="image"/><br /><br />
+			<input type="file" name="image" /><br /><br />
 		</div>
 
 		<div class="form-group">
