--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -1,31 +1,27 @@
 ﻿@model CourseWork.Domain.ViewModels.Item.ItemViewModel
 
 @{
-    ViewData["Title"] = "EditItem";
+	ViewData["Title"] = "EditItem";
 }
 
 <h1 class="text-center">Редактирование айтема</h1>
-<div class="container text-center">
+<div class="container text-center custom-group-form">
 	<form asp-action="EditItem" asp-controller="Item" enctype="multipart/form-data" method="post">
-		<div class="container text-center custom-group-form">
-			<div class="validation" asp-validation-summary="ModelOnly"></div>
+		<div class="validation" asp-validation-summary="All"></div>
 
-			<div class="form-group">
-				<label asp-for="Name">Название коллекции</label><br />
-				<input class="form-control" type="text" asp-for="Name" />
-				<span asp-validation-for="Name" />
-			</div>
+		<div class="form-group">
+			<label asp-for="Name">Название коллекции</label><br />
+			<input class="form-control" type="text" asp-for="Name" />
+		</div>
 
-			<div class="form-group">
-				<label asp-for="Content">Описание коллекции</label><br />
-				<textarea class="form-control" asp-for="Content"></textarea>
-				<span asp-validation-for="Content" />
-			</div>
+		<div class="form-group">
+			<label asp-for="Content">Описание коллекции</label><br />
+			<textarea class="form-control" asp-for="Content"></textarea>
 		</div>
 
 		<div class="form-group">
 			<p>Обложка айтема</p>
-			<input type="file" name="image"/><br /><br />
+			<input type="file" name="image" /><br /><br />
 		</div>
 
 		<div class="d-flex justify-content-center">
