--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -19,9 +19,11 @@
 
 	<form asp-action="Settings" asp-controller="Profile" enctype="multipart/form-data" method="post">
 
-		<div class="form-group">
-			<label asp-for="Username">Введите логин</label><br />
-			<input class="form-control" type="text" asp-for="Username" value="@Model.Username" disabled/>
+		<div>
+			<input type="text" asp-for="Username" value="@Model.Username" hidden />
+			<div class="form-group">
+				<input class="form-control" type="text" value="@Model.Username" disabled="disabled" />
+			</div>
 		</div>
 
 		<div class="form-group mb-2">
