change password & validation fix #2

--- a/CourseWork/Views/Account/Register.cshtml
+++ b/CourseWork/Views/Account/Register.cshtml
@@ -22,7 +22,7 @@
 		</div>
 
 		<div>
-			<button class="btn btn-outline-primary" type="submit" value="Регистрация" />
+			<button class="btn btn-outline-primary" type="submit">Регистрация</button>
 		</div>
 	</form>
 	<p>Уже есть аккаунт? - <a asp-action="Login" asp-controller="Account">авторизуйтесь</a>!</p>
