--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
 		</div>
 
 		<div>
-			<button class="btn btn-outline-primary" type="submit" value="Войти" />
+			<button class="btn btn-outline-primary" type="submit">Войти</button>
 		</div>
 
 	</form>
