--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -18,7 +18,7 @@
 		<a class="list-group-item list-group-item-action list-group-item-light" href="/Profile/Settings/@Model.Id">Редактирование профиля</a>
 	</div>
 	<div class="col-md-6  text-center">
-		<div class="d-flex justify-content-center">
+		<div class="d-flex justify-content-center m-3">
 			<div class="parent">
 				<img class="avatar lazy"
 					 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
