--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -23,7 +23,7 @@
 
 			<div class="form-group">
 				<label asp-for="ImgRef">Обложка коллекции</label>
-				<input asp-for="ImgRef" type="file" /><br /><br />
+				<input name="image" type="file" /><br /><br />
 			</div>
 
 			<div class="form-group">
