--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="Items">Items</a>
 						</li>
 					</ul>
-										
-					@await Html.PartialAsync("_LoginPartial")
+					
+					<partial name="_loginPartial" />
 				</div>
 			</div>
 		</nav>
