--- a/CourseWork/Views/Account/ChangePassword.cshtml
+++ b/CourseWork/Views/Account/ChangePassword.cshtml
@@ -7,13 +7,10 @@
 <div class="container text-center custom-group-form">
     <form asp-action="ChangePassword" asp-controller="Account" method="post">
         <div class="validation" asp-validation-summary="All"></div>
-        
-        <div>
-            <input type="text" asp-for="Name" value="@User.Identity.Name" hidden />
-            <div class="form-group">
-                <input class="form-control" type="text" value="@User.Identity.Name" disabled="disabled" />
-            </div>
-        </div>
+
+		<div class="form-group">
+			<input class="form-control" asp-for="Name" type="text" value="@User.Identity.Name" readonly />
+		</div>
 
         <div class="form-group">
             <input class="form-control" asp-for="NewPassword" placeholder="новый пароль" />
