--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -18,16 +18,14 @@
 	</div>
 
 	<form asp-action="Settings" asp-controller="Profile" enctype="multipart/form-data" method="post">
-		<div>
-			<input type="text" asp-for="Username" value="@Model.Username" hidden />
-			<div class="form-group">
-				<input class="form-control" type="text" value="@Model.Username" disabled="disabled" />
-			</div>
+		
+		<div class="form-group">
+			<input asp-for="Username" class="form-control" type="text" value="@Model.Username" readonly />
 		</div>
 
 		<div class="form-group mb-2">
 			<label asp-for="ImgRef">Загрузить свой аватар</label>
-			<input type="file" name="image" />
+			<input class="form-group" type="file" name="image" />
 		</div>
 
 		<div>
